# isa-l_crypto

./: .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  FIPS.md  LICENSE  Makefile-mingw.make  Makefile.am  Makefile.nmake  Makefile.unx  README.md  Release_notes.txt  SECURITY.md  autogen.sh  configure.ac  isa-l_crypto.def  make.inc
aes/: Makefile.am  XTS_AES_128_dec_avx.asm  XTS_AES_128_dec_expanded_key_avx.asm  XTS_AES_128_dec_expanded_key_sse.asm  XTS_AES_128_dec_expanded_key_vaes.asm  XTS_AES_128_dec_sse.asm  XTS_AES_128_dec_vaes.asm  XTS_AES_128_enc_avx.asm  XTS_AES_128_enc_expanded_key_avx.asm  XTS_AES_128_enc_expanded_key_sse.asm  XTS_AES_128_enc_expanded_key_vaes.asm  XTS_AES_128_enc_sse.asm  XTS_AES_128_enc_vaes.asm  XTS_AES_256_dec_avx.asm  XTS_AES_256_dec_expanded_key_avx.asm  XTS_AES_256_dec_expanded_key_sse.asm  XTS_AES_256_dec_expanded_key_vaes.asm  XTS_AES_256_dec_sse.asm  XTS_AES_256_dec_vaes.asm  XTS_AES_256_enc_avx.asm  XTS_AES_256_enc_expanded_key_avx.asm  XTS_AES_256_enc_expanded_key_sse.asm  XTS_AES_256_enc_expanded_key_vaes.asm  XTS_AES_256_enc_sse.asm  XTS_AES_256_enc_vaes.asm  aes_128_xts_test.json.h  aes_256_xts_test.json.h  aes_cbc.c  aes_gcm.c  aes_keyexp.c  aes_param_test.c  aes_perf.c  aes_self_tests.c  aes_xts.c  cbc_common.asm  cbc_dec_128_x4_sse.asm  cbc_dec_128_x8_avx.asm  cbc_dec_128_x8_sse.asm  cbc_dec_192_x4_sse.asm  cbc_dec_192_x8_avx.asm  (+67 more)
cmake/: ISALCryptoConfig.cmake.in  README.md  aes.cmake  fips.cmake  isa-l_crypto.h.in  md5_mb.cmake  mh_sha1.cmake  mh_sha1_murmur3_x64_128.cmake  mh_sha256.cmake  misc.cmake  rolling_hash.cmake  sha1_mb.cmake  sha256_mb.cmake  sha512_mb.cmake  sm3_mb.cmake
fips/: Makefile.am  aes_self_tests.c  asm_self_tests.asm  internal_fips.h  self_tests.c  self_tests_generic.c  self_tests_test.c  sha_self_tests.c
include/: aarch64_multibinary.h  aes_cbc.h  aes_cbc_internal.h  aes_gcm.h  aes_gcm_internal.h  aes_keyexp.h  aes_xts.h  aes_xts_internal.h  clear_regs.inc  datastruct.asm  endian_helper.h  intrinreg.h  isal_crypto_api.h  isal_self_tests.h  md5_mb.h  md5_mb_internal.h  memcpy.asm  memcpy_inline.h  mh_sha1.h  mh_sha1_murmur3_x64_128.h  mh_sha256.h  multi_buffer.h  multibinary.asm  multibinary_arm.h  reg_sizes.asm  riscv64_multibinary.h  rolling_hashx.h  sha1_mb.h  sha1_mb_internal.h  sha256_mb.h  sha256_mb_internal.h  sha512_mb.h  sha512_mb_internal.h  sm3_mb.h  sm3_mb_internal.h  test.h  types.h  xxhash_mb.h
internal/: Makefile.am  aes_keyexp_internal.h
md5_mb/: Makefile.am  md5_ctx_avx.c  md5_ctx_avx2.c  md5_ctx_avx512.c  md5_ctx_base.c  md5_ctx_base_aliases.c  md5_ctx_sse.c  md5_job.asm  md5_mb.c  md5_mb_internal.h  md5_mb_mgr_datastruct.asm  md5_mb_mgr_flush_avx.asm  md5_mb_mgr_flush_avx2.asm  md5_mb_mgr_flush_avx512.asm  md5_mb_mgr_flush_sse.asm  md5_mb_mgr_init_avx2.c  md5_mb_mgr_init_avx512.c  md5_mb_mgr_init_sse.c  md5_mb_mgr_submit_avx.asm  md5_mb_mgr_submit_avx2.asm  md5_mb_mgr_submit_avx512.asm  md5_mb_mgr_submit_sse.asm  md5_mb_param_test.c  md5_mb_rand_ssl_test.c  md5_mb_rand_test.c  md5_mb_rand_update_test.c  md5_mb_test.c  md5_mb_vs_ossl_perf.c  md5_mb_x16x2_avx512.asm  md5_mb_x4x2_avx.asm  md5_mb_x4x2_sse.asm  md5_mb_x8x2_avx2.asm  md5_multibinary.asm  md5_ref.c
mh_sha1/: Makefile.am  mh_sha1.c  mh_sha1_avx512.c  mh_sha1_base_aliases.c  mh_sha1_block_avx.asm  mh_sha1_block_avx2.asm  mh_sha1_block_avx512.asm  mh_sha1_block_base.c  mh_sha1_block_sse.asm  mh_sha1_finalize_base.c  mh_sha1_internal.h  mh_sha1_multibinary.asm  mh_sha1_param_test.c  mh_sha1_perf.c  mh_sha1_ref.c  mh_sha1_test.c  mh_sha1_update_base.c  mh_sha1_update_test.c  sha1_for_mh_sha1.c
mh_sha1_murmur3_x64_128/: Makefile.am  mh_sha1_murmur3_x64_128.c  mh_sha1_murmur3_x64_128_avx512.c  mh_sha1_murmur3_x64_128_base_aliases.c  mh_sha1_murmur3_x64_128_block_avx.asm  mh_sha1_murmur3_x64_128_block_avx2.asm  mh_sha1_murmur3_x64_128_block_avx512.asm  mh_sha1_murmur3_x64_128_block_sse.asm  mh_sha1_murmur3_x64_128_finalize_base.c  mh_sha1_murmur3_x64_128_internal.h  mh_sha1_murmur3_x64_128_multibinary.asm  mh_sha1_murmur3_x64_128_param_test.c  mh_sha1_murmur3_x64_128_perf.c  mh_sha1_murmur3_x64_128_test.c  mh_sha1_murmur3_x64_128_update_base.c  mh_sha1_murmur3_x64_128_update_test.c  murmur3_x64_128.c  murmur3_x64_128_internal.c
mh_sha256/: Makefile.am  mh_sha256.c  mh_sha256_avx512.c  mh_sha256_base_aliases.c  mh_sha256_block_avx.asm  mh_sha256_block_avx2.asm  mh_sha256_block_avx512.asm  mh_sha256_block_base.c  mh_sha256_block_sse.asm  mh_sha256_finalize_base.c  mh_sha256_internal.h  mh_sha256_multibinary.asm  mh_sha256_param_test.c  mh_sha256_perf.c  mh_sha256_ref.c  mh_sha256_test.c  mh_sha256_update_base.c  mh_sha256_update_test.c  sha256_for_mh_sha256.c
misc/: Makefile.am  version.c  version_test.c
rolling_hash/: Makefile.am  chunking_with_mb_hash.c  rolling_hash2.c  (+10 more)
sha256_mb/: Makefile.am  sha256_ctx_avx.c  sha256_ctx_avx2.c  sha256_ctx_avx512.c  sha256_ctx_avx512_ni.c  sha256_ctx_base.c  sha256_ctx_base_aliases.c  sha256_ctx_sse.c  sha256_ctx_sse_ni.c  sha256_job.asm  sha256_mb.c  sha256_mb_flush_test.c  sha256_mb_mgr_datastruct.asm  sha256_mb_mgr_flush_avx.asm  sha256_mb_mgr_flush_avx2.asm  sha256_mb_mgr_flush_avx512.asm  sha256_mb_mgr_flush_avx512_ni.asm  sha256_mb_mgr_flush_sse.asm  sha256_mb_mgr_flush_sse_ni.asm  sha256_mb_mgr_init_avx2.c  sha256_mb_mgr_init_avx512.c  sha256_mb_mgr_init_sse.c  sha256_mb_mgr_submit_avx.asm  sha256_mb_mgr_submit_avx2.asm  sha256_mb_mgr_submit_avx512.asm  sha256_mb_mgr_submit_sse.asm  sha256_mb_mgr_submit_sse_ni.asm  sha256_mb_param_test.c  sha256_mb_rand_ssl_test.c  sha256_mb_rand_test.c  sha256_mb_rand_update_test.c  sha256_mb_test.c  sha256_mb_vs_ossl_perf.c  sha256_mb_vs_ossl_shortage_perf.c  sha256_mb_x16_avx512.asm  sha256_mb_x4_avx.asm  sha256_mb_x4_sse.asm  sha256_mb_x8_avx2.asm  sha256_multibinary.asm  sha256_ni_x1.asm  (+3 more)
sha256_mb/aarch64/: sha256_ctx_ce.c  sha256_mb_aarch64_dispatcher.c  sha256_mb_dispatch_init.c  sha256_mb_mgr_ce.c  sha256_mb_multibinary.S  sha256_mb_x1_ce.S  sha256_mb_x2_ce.S  sha256_mb_x3_ce.S  sha256_mb_x4_ce.S
(+318 files in other folders)
