########################################################################
#  Copyright(c) 2025 Intel Corporation All rights reserved.
#
#  Redistribution and use in source and binary forms, with or without
#  modification, are permitted provided that the following conditions
#  are met:
#    * Redistributions of source code must retain the above copyright
#      notice, this list of conditions and the following disclaimer.
#    * Redistributions in binary form must reproduce the above copyright
#      notice, this list of conditions and the following disclaimer in
#      the documentation and/or other materials provided with the
#      distribution.
#    * Neither the name of Intel Corporation nor the names of its
#      contributors may be used to endorse or promote products derived
#      from this software without specific prior written permission.
#
#  THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
#  "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
#  LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
#  A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
#  OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
#  SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
#  LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
#  DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
#  THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
#  (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
#  OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
########################################################################

# Internal headers - not installed, only used for building
noinst_HEADERS += internal/test.h
noinst_HEADERS += internal/endian_helper.h
noinst_HEADERS += internal/memcpy_inline.h
noinst_HEADERS += internal/intrinreg.h
noinst_HEADERS += internal/sha1_mb_internal.h
noinst_HEADERS += internal/sha256_mb_internal.h
noinst_HEADERS += internal/sha512_mb_internal.h
noinst_HEADERS += internal/aes_cbc_internal.h
noinst_HEADERS += internal/aes_gcm_internal.h
noinst_HEADERS += internal/aes_keyexp_internal.h
noinst_HEADERS += internal/aes_xts_internal.h
noinst_HEADERS += internal/aarch64_multibinary.h
noinst_HEADERS += internal/riscv64_multibinary.h
